--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,3 @@
 [pytest]
-addopts = -v -s --tb=short   ; Verbose, print output, and short traceback
-markers = 
-    smoke: Run smoke tests
-    regression: Run regression tests
-    login: Test login functionality
-log_cli = true               ; Enable console logging
-log_cli_level = INFO         ; Log level
+log_cli = true
+log_cli_level = 20  # INFO level in numeric form
